# steganographer

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  FUNDING.md  README.md  TODO.md  deny.toml  release.toml  run.sh  steganographer.toml
.github/workflows/: ci.yml
config/: AGENTS.md  README.md  example.toml
docs/: AGENTS.md  README.md  algorithms.md  api-reference.md  architecture.md  cli-reference.md  configuration.md  contributing.md  cryptography.md  faq.md  getting-started.md  gstreamer.md  key-rotation.md  platforms.md  roadmap.md  security.md  steganography-theory.md  threat-model.md
keys/: daf.key  daf.pub
output/: demo_frame.rgb  demo_frame_signed.rgb
steganographer-cli/: AGENTS.md  Cargo.toml  README.md  build.rs
steganographer-cli/src/: AGENTS.md  README.md  cmd_audio.rs  cmd_encode.rs  cmd_verify.rs  cmd_video.rs  main.rs
steganographer-cli/tests/: cli_integration_tests.rs
steganographer-core/: AGENTS.md  Cargo.toml  README.md
steganographer-core/benches/: core_benchmarks.rs
steganographer-core/fuzz/: Cargo.toml  README.md  fuzz_targets.rs
steganographer-core/fuzz/fuzz_targets/: fuzz_lsb_video_extract.rs  fuzz_payload_from_bytes.rs  fuzz_rs_decode.rs
steganographer-core/src/: AGENTS.md  README.md  adaptive.rs  audio.rs  config.rs  crypto.rs  dct_video.rs  encryption.rs  error_correction.rs  hash_chain.rs  info_bar.rs  kdf.rs  lib.rs  lsb_audio.rs  lsb_video.rs  mdct_audio.rs  metrics.rs  multi_frame.rs  overlay.rs  signer_backend.rs  spread_spectrum.rs  steganalysis.rs  video.rs
steganographer-core/tests/: AGENTS.md  README.md  integration_tests.rs
steganographer-dashboard/: AGENTS.md  Cargo.toml  README.md
steganographer-dashboard/src/: lib.rs  ws_handler.rs
steganographer-dashboard/src/static/: app.js  audio_tab.js  docs_tab.js  index.html  style.css
steganographer-dashboard/tests/: dashboard_tests.rs
steganographer-gst/: AGENTS.md  Cargo.toml  README.md
steganographer-gst/src/: AGENTS.md  README.md  audio_filter.rs  lib.rs  plugin.rs  video_filter.rs
