[workspace]
members = [
    "steganographer-core",
    "steganographer-gst",
    "steganographer-cli",
    "steganographer-dashboard",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/docxology/steganographer"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
blake3 = "1.5"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha3 = "0.10"
chacha20poly1305 = "0.10"
subtle = "2"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
image = "0.25"
